SERVER-4161 Convert ResponseBuildStrategy::handleMatch() arguments to meet coding standards.